--- a/public/index.html
+++ b/public/index.html
@@ -284,9 +284,9 @@
     <!-- 1) The store definitions (including clientStore.js) -->
     <script type="module" src="/store/colorTheme.js"></script>
     <script type="module" src="/store/clientStore.js"></script>
+    <script type="module" src="/store/itemStore.js"></script>
     <script type="module" src="/store/prices.js"></script>
     <script type="module" src="/store/tossStore.js"></script>
-
     <!-- 2) Then your app.js, which references the store and sets up tabManager, etc -->
     <script type="module" src="/app.js" defer></script>
     <!--  Alpine Plugins  -->
