--- a/public/html/clients.html
+++ b/public/html/clients.html
@@ -46,7 +46,7 @@
             <td class="hidden" x-text="client.id"></td>
             <td class="p-2 text-sm round-left-border">
               <template x-if="client.isEditing">
-                <input autocomplete="on" type="text" x-model="client.name" class="table-edit-input-style" />
+                <input type="text" x-model="client.name" class="table-edit-input-style" />
               </template>
               <template x-if="!client.isEditing">
                 <span x-text="client.name" class="mr-6"></span>
@@ -54,7 +54,7 @@
             </td>
             <td class="p-2 text-sm">
               <template x-if="client.isEditing">
-                <input autocomplete="on" type="text" x-model="client.company_name" class="table-edit-input-style" />
+                <input type="text" x-model="client.company_name" class="table-edit-input-style" />
               </template>
               <template x-if="!client.isEditing">
                 <span x-text="client.company_name" class="mr-6"></span>
@@ -62,7 +62,7 @@
             </td>
             <td class="p-2 text-sm">
               <template x-if="client.isEditing">
-                <input autocomplete="on" type="text" x-model="client.address" class="table-edit-input-style" />
+                <input type="text" x-model="client.address" class="table-edit-input-style" />
               </template>
               <template x-if="!client.isEditing">
                 <span x-text="client.address" class="mr-6"></span>
