--- a/backups/invoices copy.html
+++ b/backups/invoices copy.html
@@ -1,4 +1,4 @@
-<div x-data="invoiceManager2" class="relative w-full px-12 py-4 2xl:px-20">
+<div x-data="invoiceManager" class="relative w-full px-12 py-4 2xl:px-20">
   <div class="inset-0 flex justify-between p-1 mb-12 align-baseline border rounded-md border-vls/40 dark:border-vls/40">
     <div>
       <button @click="openModal()" class="flex items-baseline butt-style p-1">
