Reworking invoices componentised the entire invoicing section - left to do - piece it back together

--- a/public/html/invoices2.html
+++ b/public/html/invoices2.html
@@ -2,9 +2,14 @@
   <div x-data="clientSelect" id="client-select">
     <!-- Client selection -->
   </div>
-
-  <div x-data="invoiceTabs" id="tabs-invoice">
-    <!-- Tabs Invoice  -->
+  <div x-data="tabsInvoice" id="tabs-invoice">
+    <!-- Tabs Invoice Style/Sample  -->
+  </div>
+  <div x-data="invoicing" id="invo-section">
+    <!-- Invoice Add/Remove -->
+  </div>
+  <div class="totalsInvoice" id="invo-totals">
+    <!-- Totals -->
   </div>
 
   <div>
