--- a/public/html/invoices/modalSampleAdd.html
+++ b/public/html/invoices/modalSampleAdd.html
@@ -1,41 +1,41 @@
-<div x-show="showAddSampleModal" x-transition.opacity.duration.300 class="z-50 outter-modal-overlay-blur-fixed">
-  <div class="inner-modal-size-positioning-relative modal-bg-and-borders">
-    <div class="text-center" @click.outside="showAddSampleModal = false">
-      <div class="p-6">
-        <h3 class="mb-4 modal-title">Add Sample</h3>
-        <form @submit.prevent="addSample">
+<div>
+  <template x-teleport="body">
+    <div class="outter-modal-overlay-blur-fixed z-[100]" x-show="$store.items.modalSample">
+      <div class="inner-modal-size-positioning-relative modal-bg-and-borders p-6 space-y-4">
+        <h2 class="modal-title">Add Sample</h2>
+        <form @submit.prevet="$store.items.addSample()" class="space-y-4">
           <input
-            x-model="newSample.name"
-            x-ref="newSampleName"
+            x-model="$store.items.item.name"
+            x-ref="sampleName"
             name="name"
             type="text"
             placeholder="Sample Name"
-            class="w-full mb-2 modal-input-style"
+            class="w-full modal-input-style !p-1.5"
             required />
           <input
-            x-model="newSample.time"
+            x-model="$store.items.item.time"
             name="time"
             type="number"
             min="0"
             step="0.01"
             placeholder="Time (in minutes)"
-            class="w-full mb-2 modal-input-style"
+            class="w-full modal-input-style !p-1.5"
             required />
           <input
-            x-model="newSample.price"
+            x-model="$store.items.item.price"
             name="price"
             type="number"
             min="0"
             step="0.01"
             placeholder="Price"
-            class="w-full mb-2 modal-input-style"
+            class="w-full modal-input-style !p-1.5"
             required />
-          <div class="flex justify-end gap-8 mt-2">
-            <button type="submit" class="modal-btn-prim">Add</button>
-            <button @click="showAddSampleModal = false" class="modal-btn-sec">Close</button>
-          </div>
         </form>
+        <div class="w-full flex items-center justify-end space-x-6">
+          <button @click.prevent="$store.items.addSample()" class="modal-btn-prim">add</button>
+          <button @click="$store.items.showAddSampleModal = false" class="modal-btn-sec">close</button>
+        </div>
       </div>
     </div>
-  </div>
+  </template>
 </div>
